--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "Crypto Miner Tycoon",
-  "short_name": "MinerApp",
+  "short_name": "MinerTycoon",
   "start_url": "./indexApp.html",
   "display": "standalone",
   "background_color": "#0f0c29",
   "theme_color": "#4e54c8",
+  "description": "Start your virtual cryptocurrency mining empire today! Connect to our high-speed VPS servers.",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/3067/3067789.png",
