inital commit and add

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "background_color": "#0f0c29",
   "theme_color": "#4e54c8",
-  "description": "Start your virtual cryptocurrency mining empire today! Connect to our high-speed VPS servers.",
+  "description": "เริ่มสร้างอาณาจักรการขุดเหรียญคริปโตจำลองของคุณวันนี้! เชื่อมต่อกับเซิร์ฟเวอร์ VPS ความเร็วสูงของเรา",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/3067/3067789.png",
