--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
+    "compression": "^1.7.4",
     "body-parser": "^1.20.2"
   }
 }
